kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: animshamura/budget-be
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: backend-volume
              mountPath: /app
      volumes:
        - name: backend-volume
          hostPath:
            path: ~/backend/back-vol
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
